<?xml version="1.0" encoding="UTF-8"?>

<!--
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	    http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<parent>
		<groupId>org.hobsoft</groupId>
		<artifactId>hobsoft-parent</artifactId>
		<version>0.4.2</version>
	</parent>
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.hobsoft.spring</groupId>
	<artifactId>spring-rest-template-logger</artifactId>
	<version>2.0.1-SNAPSHOT</version>
	
	<name>Spring RestTemplate Logger</name>
	<description>Spring RestTemplate customizer to log HTTP traffic.</description>
	<url>https://github.com/markhobson/rest-template-logger</url>
	<inceptionYear>2017</inceptionYear>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<scm>
		<connection>scm:git:git@github.com:markhobson/rest-template-logger.git</connection>
		<developerConnection>scm:git:git@github.com:markhobson/rest-template-logger.git</developerConnection>
		<url>https://github.com/markhobson/rest-template-logger</url>
		<tag>HEAD</tag>
	</scm>
	
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/markhobson/rest-template-logger/issues</url>
	</issueManagement>
	
	<developers>
		<developer>
			<id>markhobson</id>
			<name>Mark Hobson</name>
			<email>markhobson@gmail.com</email>
			<roles>
				<role>Project Lead</role>
			</roles>
			<timezone>0</timezone>
		</developer>
	</developers>
	
	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.test.skip>true</maven.test.skip>
	</properties>
	<build>
	
		<pluginManagement>
		
			<plugins>
			
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>
			
			</plugins>
		
		</pluginManagement>
		
		<plugins>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openrewrite.maven</groupId>
				<artifactId>rewrite-maven-plugin</artifactId>
				<version>5.32.1</version>
				<configuration>
					<activeRecipes>
						<recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
						<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_2</recipe>
						<recipe>org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration</recipe>
						<recipe>org.openrewrite.hibernate.MigrateToHibernate63</recipe>
						<recipe>org.openrewrite.hibernate.TypeAnnotationParameter</recipe>
					</activeRecipes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-migrate-java</artifactId>
						<version>2.16.0</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-spring</artifactId>
						<version>5.11.0</version>
					</dependency>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-hibernate</artifactId>
						<version>1.5.1</version>
					</dependency>
				</dependencies>
			</plugin>		
		</plugins>
	
	</build>
	
	<dependencyManagement>
		
		<dependencies>
			
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>3.2.6</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			
			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock</artifactId>
				<version>2.27.2</version>
			</dependency>

			<!--  ##### REWRITE BOM -->
			<dependency>
				<groupId>org.openrewrite.recipe</groupId>
				<artifactId>rewrite-recipe-bom</artifactId>
				<version>2.11.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--  ####REWRITE BOM -->
		</dependencies>
		
	</dependencyManagement>
	
	<dependencies>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<scope>test</scope>
		</dependency>
		
	</dependencies>
	
</project>

